--- a/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventPaymentInfoPageCell" rowHeight="64" id="HZn-E6-lVa" customClass="KLEventPaymentInfoPageCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="KLEventPaymentInfoPageCell" rowHeight="64" id="HZn-E6-lVa" customClass="KLEventPaymentInfoPageCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="229"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HZn-E6-lVa" id="HJ8-cJ-d3I">
@@ -21,11 +21,11 @@
                                     <constraint firstAttribute="height" constant="21" id="Bvk-6D-zpa"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.082352941176470587" green="0.72941176470588232" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.082352941176470587" green="0.72941176470588232" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3k-fh-DL0">
-                                <rect key="frame" x="0.0" y="20" width="320" height="80"/>
+                                <rect key="frame" x="0.0" y="25" width="320" height="80"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="V8L-EB-NUp"/>
@@ -76,7 +76,7 @@
                             <constraint firstAttribute="bottom" secondItem="4Fb-YN-Za5" secondAttribute="bottom" constant="33" id="NMS-AP-aZs"/>
                             <constraint firstAttribute="trailing" secondItem="Z3k-fh-DL0" secondAttribute="trailing" id="OBg-8M-liC"/>
                             <constraint firstAttribute="trailing" secondItem="4Fb-YN-Za5" secondAttribute="trailing" id="S9m-wc-eeA"/>
-                            <constraint firstItem="Z3k-fh-DL0" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="20" id="UZj-XP-F5t"/>
+                            <constraint firstItem="Z3k-fh-DL0" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="25" id="UZj-XP-F5t"/>
                             <constraint firstItem="J7o-Hc-dlN" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" id="UhG-K4-0M7"/>
                             <constraint firstItem="MrK-y4-mGC" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="hpj-ha-xoJ"/>
                             <constraint firstItem="4Fb-YN-Za5" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="uTR-1G-bIU"/>
