--- a/Klike/Sources/Controllers/Event/KLPaymentPriceAmountView.xib
+++ b/Klike/Sources/Controllers/Event/KLPaymentPriceAmountView.xib
@@ -7,11 +7,71 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KLPaymentPriceAmountView">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rZS-8P-OlZ">
+                    <rect key="frame" x="126" y="8" width="19" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="6Vq-NR-Ggc"/>
+                        <constraint firstAttribute="width" constant="19" id="Lrb-0H-sDY"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aEo-Yi-uAZ">
+                    <rect key="frame" x="145" y="3" width="31" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="q1U-y9-jY9"/>
+                    </constraints>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="48"/>
+                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                            <color key="value" red="0.082352941176470587" green="0.72941176470588232" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </textField>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xex-7o-Aat">
+                    <rect key="frame" x="124" y="52" width="72" height="1"/>
+                    <color key="backgroundColor" red="0.08235294118" green="0.72941176470000002" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="eVq-ks-QrI"/>
+                        <constraint firstAttribute="width" constant="72" id="vye-Oy-YNx"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEb-oE-pH0">
+                    <rect key="frame" x="84" y="55" width="153" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="DtM-4a-H5a"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
+                    <color key="textColor" red="0.082352941176470587" green="0.72941176470588232" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="aEo-Yi-uAZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="3" id="0vb-d1-Rtw"/>
+                <constraint firstItem="Xex-7o-Aat" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="52" id="DIt-3J-jIn"/>
+                <constraint firstItem="rZS-8P-OlZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="JqK-fR-1MV"/>
+                <constraint firstAttribute="centerX" secondItem="Xex-7o-Aat" secondAttribute="centerX" id="Oqj-od-FIY"/>
+                <constraint firstAttribute="trailing" secondItem="QEb-oE-pH0" secondAttribute="trailing" constant="83" id="OtR-gN-g3g"/>
+                <constraint firstItem="QEb-oE-pH0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="55" id="aDX-3A-f91"/>
+                <constraint firstItem="aEo-Yi-uAZ" firstAttribute="leading" secondItem="rZS-8P-OlZ" secondAttribute="trailing" id="dc5-L4-UvI"/>
+                <constraint firstAttribute="centerX" secondItem="aEo-Yi-uAZ" secondAttribute="centerX" id="l3s-lE-6es"/>
+                <constraint firstItem="QEb-oE-pH0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="84" id="qns-YE-Tex"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="212" y="347"/>
+            <connections>
+                <outlet property="_labelMin" destination="QEb-oE-pH0" id="Khl-Gv-x3J"/>
+                <outlet property="_textPrice" destination="aEo-Yi-uAZ" id="yWE-EY-ytj"/>
+                <outlet property="_viewSeparator" destination="Xex-7o-Aat" id="I2d-mL-4dl"/>
+            </connections>
+            <point key="canvasLocation" x="211" y="328"/>
         </view>
     </objects>
 </document>
