--- a/Klike/Sources/Controllers/Event/KLPaymentNumberAmountView.xib
+++ b/Klike/Sources/Controllers/Event/KLPaymentNumberAmountView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -27,15 +27,20 @@
                     <color key="textColor" red="0.36862745099999999" green="0.58431372550000005" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0m6-0J-SKj">
-                    <rect key="frame" x="147" y="3" width="27" height="45"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EzL-Lz-rgL">
+                    <rect key="frame" x="145" y="7" width="31" height="45"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="45" id="mAM-4V-ZHS"/>
+                        <constraint firstAttribute="height" constant="45" id="PmS-lL-DjT"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="48"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="48"/>
+                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                            <color key="value" red="0.08235294118" green="0.72941176470000002" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDW-Xk-03L">
                     <rect key="frame" x="194" y="0.0" width="60" height="60"/>
                     <constraints>
@@ -65,23 +70,23 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="nDW-Xk-03L" firstAttribute="leading" secondItem="0m6-0J-SKj" secondAttribute="trailing" constant="20" id="1nR-mX-BPK"/>
                 <constraint firstItem="lEu-v1-r92" firstAttribute="top" secondItem="ACz-IH-6P9" secondAttribute="top" constant="55" id="ASO-A0-w1E"/>
                 <constraint firstAttribute="trailing" secondItem="lEu-v1-r92" secondAttribute="trailing" constant="83" id="KW2-fH-mLv"/>
-                <constraint firstAttribute="centerX" secondItem="0m6-0J-SKj" secondAttribute="centerX" id="OPl-1q-pnM"/>
+                <constraint firstItem="nDW-Xk-03L" firstAttribute="leading" secondItem="EzL-Lz-rgL" secondAttribute="trailing" constant="18" id="LsF-Rq-fj3"/>
+                <constraint firstItem="EzL-Lz-rgL" firstAttribute="top" secondItem="ACz-IH-6P9" secondAttribute="top" constant="7" id="Qu7-jR-Ier"/>
                 <constraint firstItem="nDW-Xk-03L" firstAttribute="top" secondItem="ACz-IH-6P9" secondAttribute="top" id="VRn-UB-pz8"/>
                 <constraint firstItem="lEu-v1-r92" firstAttribute="leading" secondItem="ACz-IH-6P9" secondAttribute="leading" constant="84" id="YUc-RQ-0EE"/>
-                <constraint firstItem="0m6-0J-SKj" firstAttribute="top" secondItem="ACz-IH-6P9" secondAttribute="top" constant="3" id="fjf-kg-ZNH"/>
-                <constraint firstItem="0m6-0J-SKj" firstAttribute="leading" secondItem="W7h-Bg-Vme" secondAttribute="trailing" constant="20" id="fzN-tV-CcG"/>
+                <constraint firstAttribute="centerX" secondItem="EzL-Lz-rgL" secondAttribute="centerX" id="ao5-98-nVR"/>
                 <constraint firstItem="W7h-Bg-Vme" firstAttribute="top" secondItem="ACz-IH-6P9" secondAttribute="top" id="h8b-9W-oA8"/>
                 <constraint firstItem="ELF-dO-LXj" firstAttribute="top" secondItem="ACz-IH-6P9" secondAttribute="top" constant="52" id="qRe-LY-AEH"/>
                 <constraint firstAttribute="centerX" secondItem="ELF-dO-LXj" secondAttribute="centerX" id="yqV-sQ-Wc3"/>
+                <constraint firstItem="EzL-Lz-rgL" firstAttribute="leading" secondItem="W7h-Bg-Vme" secondAttribute="trailing" constant="18" id="zDf-gP-Jch"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="_labelNumber" destination="0m6-0J-SKj" id="Ag6-Gd-HV6"/>
                 <outlet property="_lavelTickets" destination="lEu-v1-r92" id="CTp-6Q-bS7"/>
+                <outlet property="_textPrice" destination="EzL-Lz-rgL" id="j6H-IY-PQT"/>
                 <outlet property="_viewSeparator" destination="ELF-dO-LXj" id="bHy-Kv-r1n"/>
             </connections>
             <point key="canvasLocation" x="211" y="328"/>
